opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/qq"
doc: "https://zshipko.github.io/qq/doc"
license: "ISC"
dev-repo: "git://github.com:zshipko/qq.git"
bug-reports: "https://github.com/zshipko/qq/issues"

depends:
[
    "ocaml" {>= "4.03.0"}
    "dune"
]

build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name] {with-test}
]
